# Babbleon

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  DEFERRED.md  HANDOFF.md  LLM install-time semantic diversification  PLAN.md  README.md  RESEARCH.md  RUST_PLAN.md  SECURITY.md  TODO.md  V2_PLAN.md  deny.toml  handoff.md  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
crates/babbleon/: Cargo.toml
crates/babbleon-cli/: Cargo.toml
crates/babbleon-cli/src/: deception.rs  main.rs
crates/babbleon-ns-helper/: Cargo.toml
crates/babbleon-ns-helper/src/: main.rs
crates/babbleon-pam/: Cargo.toml  build.rs
crates/babbleon-pam/src/: lib.rs  pam_babbleon.c
crates/babbleon/src/: audit.rs  backup.rs  credentials.rs  crypto.rs  errors.rs  events.rs  lib.rs  manifest.rs  platform.rs  plugins.rs  process_hardening.rs  session.rs  storage.rs
crates/babbleon/src/enforcement/: driver.rs  ebpf.rs  factory.rs  landlock.rs  linux_ns.rs  mod.rs  response.rs  seccomp.rs  simulated.rs  syscalls.rs  view.rs  wrapper.rs
crates/babbleon/src/mapping/: fpe.rs  kdf.rs  mapper.rs  mod.rs
crates/babbleon/src/vault/: attempts.rs  backend.rs  core.rs  factory.rs  fido2.rs  mod.rs  soft.rs  tpm.rs  usb.rs
crates/babbleon/tests/: corpus_fingerprint.rs  enforcement.rs  fingerprint.rs  mapping_properties.rs
crates/babbleon/tests/fixtures/help-text/: bash.txt  curl.txt  docker.txt  nc.txt  npm.txt  python3.txt  wget.txt
crates/babbleon/wordlist/: README.md
crates/v2-babbleon/: Cargo.toml
crates/v2-babbleon-adversarial-bench/: Cargo.toml
crates/v2-babbleon-adversarial-bench/challenges/: README.md  auth-hash-check.toml  auth-literal-string.toml  realistic-cli.toml
crates/v2-babbleon-adversarial-bench/runs/2026-06-21-claude-opus-4-7-subagent/: README.md  runs.jsonl
crates/v2-babbleon-adversarial-bench/runs/2026-06-22-claude-opus-4-7-subagent-layer7-prototype/: README.md
crates/v2-babbleon-adversarial-bench/src/: adversary.rs  challenge.rs  errors.rs  layer_config.rs  lib.rs  main.rs  prompt.rs  run_record.rs  scoring.rs  scramble_pipeline.rs  secret_literal_layer.rs  success_predicate.rs  summary.rs
crates/v2-babbleon-adversarial-bench/tests/: cli_end_to_end.rs  seed_challenges_round_trip.rs
crates/v2-babbleon-core/: Cargo.toml
crates/v2-babbleon-core/src/: activated_table.rs  activated_table_bridge.rs  crypto_compare.rs  errors.rs  events.rs  key_derivation.rs  lib.rs  mapping.rs  per_host_secret.rs  permutation.rs  permutation_cache.rs  tripwire.rs  wordlist.rs  wrapper.rs
crates/v2-babbleon-daemon/: Cargo.toml
crates/v2-babbleon-daemon-protocol/: Cargo.toml
crates/v2-babbleon-daemon-protocol/src/: client.rs  errors.rs  lib.rs  protocol.rs  socket_path.rs  unlock_secret.rs
crates/v2-babbleon-daemon-protocol/tests/: proptest_protocol.rs
crates/v2-babbleon-daemon/src/: cli.rs  client.rs  epoch_journal.rs  errors.rs  handlers.rs  hardening.rs  lib.rs  main.rs  materialization.rs  protocol.rs  seccomp_profile.rs  socket.rs  state.rs
crates/v2-babbleon-daemon/tests/: client_round_trip.rs  end_to_end_binary.rs  seccomp_denies_forbidden.rs  seccomp_envelope.rs
crates/v2-babbleon-launch-artefacts/: Cargo.toml
crates/v2-babbleon-launch-artefacts/src/: activated_table.rs  credentials.rs  errors.rs  lib.rs
crates/v2-babbleon-launch-untrusted/: Cargo.toml
crates/v2-babbleon-launch-untrusted/src/: activated_table_input.rs  bounding_set.rs  cli.rs  credential_gate.rs  errors.rs  identity_drop.rs  lib.rs  main.rs  mounts.rs  namespaces.rs  preflight.rs  process_hardening.rs  seccomp_profile.rs  syscall.rs
crates/v2-babbleon-launch-untrusted/tests/: activated_table_roundtrip.rs  daemon_socket_input.rs  rooted_lifecycle.rs  seccomp_denies_forbidden.rs
crates/v2-babbleon-login-shell/: Cargo.toml
crates/v2-babbleon-login-shell/src/: lib.rs  main.rs
crates/v2-babbleon-pam/: Cargo.toml  build.rs
crates/v2-babbleon-pam/src/: lib.rs  pam_babbleon.c
crates/v2-babbleon-pam/tests/: built_artifact.rs  socket_path_agreement.rs
crates/v2-babbleon-preprocessor/: Cargo.toml
crates/v2-babbleon-preprocessor/src/: chunk_reorder.rs  decoy_injection.rs  direction_reversal.rs  errors.rs  file_format.rs  identifier_scrambler.rs  keyword_scrambler.rs  keyword_wordlist.rs  lib.rs  operator_scrambler.rs  operator_wordlist.rs  pipeline.rs  python_keywords.rs  python_operators.rs  python_tokenizer.rs  scrambler.rs  secret_literal_scrambler.rs  secret_literal_wordlist.rs  tokenizer_noise.rs  tokens.rs  unscrambler.rs  whitespace_wordlist.rs
crates/v2-babbleon-preprocessor/tests/: example_puzzles.rs  full_round_trip.rs  pipeline_with_real_mapping.rs  proptest_round_trip.rs
crates/v2-babbleon-python-shim/: Cargo.toml
crates/v2-babbleon-python-shim/src/: exec_python.rs  lib.rs  main.rs  pipeline.rs  process_hardening.rs  signal_forwarding.rs
crates/v2-babbleon-python-shim/tests/: end_to_end.rs
crates/v2-babbleon-vault/: Cargo.toml
crates/v2-babbleon-vault/src/: backend.rs  errors.rs  file_layout.rs  lib.rs  payload.rs  soft_backend.rs  vault.rs
crates/v2-babbleon-vault/tests/: proptest_vault.rs
crates/v2-babbleon/src/: corpus_lifecycle.rs  enroll.rs  main.rs  passphrase.rs  scramble_lifecycle.rs  seccomp_profile.rs  vault_lifecycle.rs
crates/v2-babbleon/tests/: cli_against_daemon.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fpe_roundtrip.rs  honey_fifo_line.rs  wrapper_render.rs
tools/preprocessor-benchmark/: Cargo.toml  README.md  RESULTS.md
tools/preprocessor-benchmark/src/: main.rs
tools/rotation-benchmark/: Cargo.toml  README.md  RESULTS.md
tools/rotation-benchmark/src/: main.rs
tools/tokenizer-benchmark/: Cargo.toml  README.md  RESULTS.md
tools/tokenizer-benchmark/src/: main.rs
tools/wordlist-density-analysis/: Cargo.toml  README.md  RESULTS.md
tools/wordlist-density-analysis/src/: filter.rs  load.rs  main.rs  report.rs  score.rs  stats.rs
tools/wordlist-role-partitioning/: Cargo.toml  README.md  RESULTS.md
tools/wordlist-role-partitioning/src/: allocation.rs  entropy.rs  extract.rs  main.rs  params.rs  report.rs  seed.rs
(+169 files in other folders)
