[workspace]
resolver = "2"
members = [
    "crates/babbleon",
    "crates/babbleon-cli",
    "crates/babbleon-ns-helper",
    "crates/babbleon-pam",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/qualified1079/babbleon"

[workspace.dependencies]
# core crypto
age = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"
# Linux syscalls (cfg-gated at use sites)
nix = { version = "0.27", features = ["mount", "sched", "process", "user", "signal"] }
# seccomp-bpf filter (M3)
seccompiler = "0.4"
# Landlock LSM (M3, kernel 5.13+)
landlock = "0.3"
# libc for syscall numbers in seccomp deny list
libc = "0.2"
# misc
once_cell = "1"
dirs = "5"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
