[package]
name = "babbleon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "babbleon"
path = "src/main.rs"

[dependencies]
babbleon = { path = "../babbleon" }
anyhow = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
