[package]
name = "v2-babbleon-adversarial-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Babbleon v2 — adversarial regression bench measuring crack-fraction of LLM/agent adversaries against scrambled puzzles across layer configurations."
publish = false

[lib]
# Crate-import name follows the `babbleon_<thing>_v2` convention every
# other v2 crate uses (core, preprocessor, daemon-protocol, vault, ...).
name = "babbleon_adversarial_bench_v2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
# Direct dependency on the preprocessor lets the bench drive scramble
# in pure-compute mode with a deterministic synthetic secret.  No
# daemon round-trip required during a bench run, so the harness is
# reproducible from a fixed (secret, epoch) seed.
v2-babbleon-preprocessor = { path = "../v2-babbleon-preprocessor" }
v2-babbleon-core = { path = "../v2-babbleon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Round-trip property tests for the scoring harness and challenge
# loader.  Same shape as the preprocessor's proptest harness.
proptest = { workspace = true }
tempfile = { workspace = true }
