[package]
name = "v2-babbleon-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Babbleon v2 daemon. Holds the per-host secret, builds per-epoch mappings, materialises wrappers, and ships activated tables to v2-babbleon-launch-untrusted over a Unix socket."
publish = false

[lib]
name = "babbleon_daemon_v2"
path = "src/lib.rs"

[[bin]]
name = "babbleon-daemon"
path = "src/main.rs"

[dependencies]
# Core: secret, mapping, wrapper, activated-table.
v2-babbleon-core = { path = "../v2-babbleon-core" }
# Wire protocol + operator-side client.  Carved out so daemon peers
# (launcher, user CLI) can link only the small protocol surface.
# The daemon itself still consumes Request / Response / ErrorKind from
# the same crate so a single source of truth governs the wire schema.
v2-babbleon-daemon-protocol = { path = "../v2-babbleon-daemon-protocol" }
# Errors + logging.
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# CLI.
clap = { workspace = true }
# IPC + filesystem primitives.
nix = { workspace = true }
# Linux syscall surface — only used if we need raw libc (avoided
# where possible; nix wraps most needs).
libc = { workspace = true }
# Wire format for the socket protocol.  Hand-parsed via serde_json::Value
# (no `#[derive(Deserialize)]` on operator-influenceable surfaces; see
# security-baseline rule 11).
serde_json = { workspace = true }
# Async runtime — to be decided.  Phase 2 ships a single-threaded
# blocking loop; phase 4+ may move to tokio if the wrapper-build
# pipeline benefits from parallelism.  Not yet pulled in.

[dev-dependencies]
tempfile = { workspace = true }
