[package]
name = "v2-babbleon-launch-untrusted"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Babbleon v2 untrusted-tier launcher. Installs with file capabilities (NOT setuid-root) per docs/v2/least-privilege.md."
publish = false

[[bin]]
name = "babbleon-launch-untrusted"
path = "src/main.rs"

[dependencies]
# Errors + logging.
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# CLI.
clap = { workspace = true }
# Linux syscall surface — every unsafe libc call is quarantined to
# `syscall.rs` per security-baseline rule 1 exception policy.
libc = { workspace = true }
# Higher-level Linux primitives we use through safe wrappers.
nix = { workspace = true }
# seccomp-bpf filter for the post-step-10 syscall lockdown.
seccompiler = { workspace = true }
# Shared types: the per-epoch ActivatedTable (no secret material).
# We import the activated_table module only; the rest of core is
# unused from the launcher and the linker drops it.  A future
# refactor may extract activated_table into its own crate to
# tighten the audit surface; tracked in HANDOFF.md.
v2-babbleon-core = { path = "../v2-babbleon-core" }
# Daemon-socket protocol + client (Request, Response, round_trip).
# We pull the daemon crate solely for its IPC surface so the launcher
# can ask a running daemon for the activated table; the daemon's
# state / handlers / socket-listener code is dead from the
# launcher's POV and the linker drops it.  A future refactor will
# extract protocol + client into a thin shared crate; tracked in
# HANDOFF.md.
v2-babbleon-daemon = { path = "../v2-babbleon-daemon" }

[dev-dependencies]
tempfile = { workspace = true }
