[package]
name = "v2-babbleon-launch-untrusted"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Babbleon v2 untrusted-tier launcher. Installs with file capabilities (NOT setuid-root) per docs/v2/least-privilege.md."
publish = false

[[bin]]
name = "babbleon-launch-untrusted"
path = "src/main.rs"

[dependencies]
# Errors + logging.
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# CLI.
clap = { workspace = true }
# Linux syscall surface — every unsafe libc call is quarantined to
# `syscall.rs` per security-baseline rule 1 exception policy.
libc = { workspace = true }
# Higher-level Linux primitives we use through safe wrappers.
nix = { workspace = true }
# seccomp-bpf filter for the post-step-10 syscall lockdown.
seccompiler = { workspace = true }
# Secret-free per-host artefacts: ActivatedTable + credential
# discovery / env-var policy.  This crate carries NO crypto
# dependencies — HKDF / Ed25519 / Argon2 / SHA-2 do NOT appear
# in the launcher's `cargo tree --edges normal`.  Companion
# carve-out to v2-babbleon-daemon-protocol below.
v2-babbleon-launch-artefacts = { path = "../v2-babbleon-launch-artefacts" }
# Daemon-socket protocol + client (Request, Response, round_trip).
# We link only the carve-out leaf crate so the launcher's audit
# surface excludes the daemon's state, materialisation pipeline,
# and serve loop — none of which the launcher can reach by
# construction now that the dependency arrow no longer points at
# the full daemon crate.
v2-babbleon-daemon-protocol = { path = "../v2-babbleon-daemon-protocol" }

[dev-dependencies]
tempfile = { workspace = true }
# tests/daemon_socket_input.rs spawns `babbleon-daemon` as a
# subprocess.  Cargo does NOT build cross-package binaries from a
# dev-dep edge (the earlier comment claiming otherwise was wrong) —
# `CARGO_BIN_EXE_*` is only set for binaries in THIS package.  The
# test self-bootstraps the daemon binary via an in-test
# `cargo build -p v2-babbleon-daemon --bin babbleon-daemon` call
# (see `bootstrap_via_cargo_build` in that file).  We keep the
# library dev-dep edge below because the test uses MappingBuilder,
# PerHostSecret, Wordlist, and wrapper::write_all_wrappers to
# exercise the daemon pipeline at the library level — that work
# DOES come from the dev-dep.
v2-babbleon-daemon = { path = "../v2-babbleon-daemon" }
# Core is dev-dep only: integration tests use MappingBuilder,
# PerHostSecret, Wordlist, and wrapper::write_all_wrappers to
# exercise the full daemon pipeline at the library level.
v2-babbleon-core = { path = "../v2-babbleon-core" }
