[package]
name = "v2-babbleon-preprocessor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Babbleon v2 — runtime preprocessor for structural scrambling (phase 3, layer 3: whitespace-as-words)."
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
v2-babbleon-core = { path = "../v2-babbleon-core" }
thiserror.workspace = true
