[package]
name = "v2-babbleon-preprocessor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Babbleon v2 — runtime preprocessor for structural scrambling (phase 3, layer 3: whitespace-as-words)."
publish = false

[lib]
# Crate-import name follows the `babbleon_<thing>_v2` convention every
# other v2 crate uses (core, daemon-protocol, vault, ...).  Disk-name
# carries the `v2-` prefix so the v1/v2 split is visible in the crate
# listing; import-name reads naturally in downstream `use` lines.
name = "babbleon_preprocessor_v2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
v2-babbleon-core = { path = "../v2-babbleon-core" }
thiserror.workspace = true

[dev-dependencies]
# Property-based testing for the tokenize -> scramble -> unscramble
# round-trip invariant.  Same harness shape as
# v2-babbleon-daemon-protocol's proptest_protocol.rs and
# v2-babbleon-vault's proptest_vault.rs.
proptest = { workspace = true }
