[package]
name = "v2-babbleon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Babbleon v2 user-facing CLI (init / unlock / rotate / status / mount-scrambled-view)."
publish = false

[[bin]]
name = "babbleon-v2"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
v2-babbleon-core = { path = "../v2-babbleon-core" }
# Used for the daemon socket protocol + client; the user-facing CLI
# does NOT spawn or hold the daemon's state — it just round-trips
# requests over the Unix socket.  Future refactor: extract
# protocol+client into a thin shared crate so v2-babbleon and
# v2-babbleon-launch-untrusted both depend on the leaf rather than
# the daemon binary's full surface.
v2-babbleon-daemon = { path = "../v2-babbleon-daemon" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
