[package]
name = "v2-babbleon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Babbleon v2 user-facing CLI (init / unlock / rotate / status / mount-scrambled-view)."
publish = false

[[bin]]
name = "babbleon-v2"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
v2-babbleon-core = { path = "../v2-babbleon-core" }
# Wire protocol + operator-side client for the daemon's Unix socket.
# The user-facing CLI does NOT spawn or hold the daemon's state — it
# just round-trips requests.  Depending on the protocol leaf instead of
# the full daemon crate keeps this binary's audit surface to the
# protocol parser + client; the daemon's serve loop, materialisation
# pipeline, and per-host secret never appear in this crate's
# dependency graph.
v2-babbleon-daemon-protocol = { path = "../v2-babbleon-daemon-protocol" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
